--- a/Solutions/Paladin Extensions/PX Loader/PX Loader.vcxproj
+++ b/Solutions/Paladin Extensions/PX Loader/PX Loader.vcxproj
@@ -24,6 +24,7 @@
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>PXLoader</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.14393.0</WindowsTargetPlatformVersion>
+    <ProjectName>PX Manager</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -143,10 +144,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="PX Loader.hpp" />
+    <ClInclude Include="PX Manager.hpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="PX Loader.cpp" />
+    <ClCompile Include="PX Manager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PX Framework\PX Framework.vcxproj">
